; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_ni_daq_700.c_subdev_700_cb.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/comedi/drivers/extr_ni_daq_700.c_subdev_700_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DIO_W = common dso_local global i64 0, align 8
@DIO_R = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i64)* @subdev_700_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @subdev_700_cb(i32 %0, i32 %1, i32 %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i64 %3, i64* %9, align 8
  %11 = load i64, i64* %9, align 8
  store i64 %11, i64* %10, align 8
  %12 = load i32, i32* %6, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %4
  %15 = load i32, i32* %8, align 4
  %16 = load i64, i64* %10, align 8
  %17 = load i64, i64* @DIO_W, align 8
  %18 = add i64 %16, %17
  %19 = call i32 @outb(i32 %15, i64 %18)
  store i32 0, i32* %5, align 4
  br label %25

20:                                               ; preds = %4
  %21 = load i64, i64* %10, align 8
  %22 = load i64, i64* @DIO_R, align 8
  %23 = add i64 %21, %22
  %24 = call i32 @inb(i64 %23)
  store i32 %24, i32* %5, align 4
  br label %25

25:                                               ; preds = %20, %14
  %26 = load i32, i32* %5, align 4
  ret i32 %26
}

declare dso_local i32 @outb(i32, i64) #1

declare dso_local i32 @inb(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
